--- a/public/assets/scss/pages/_dashboard.scss
+++ b/public/assets/scss/pages/_dashboard.scss
@@ -68,6 +68,10 @@
 .form-group{
     margin-bottom: 16px;
 }
+.label-left{
+    display: flex;
+    align-items: center;
+}
 .swap-flex{
     display: flex;
     justify-content: space-between;
