--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -103,3 +103,6 @@ input[type=datetime-local]::-webkit-calendar-picker-indicator {
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
+button:disabled{
+  opacity: 0.5;
+}
