--- a/public/assets/scss/pages/different-chain-bridge.scss
+++ b/public/assets/scss/pages/different-chain-bridge.scss
@@ -37,7 +37,7 @@
         padding: 10px 32px 10px 10px;
         font-size: 12px;
     }
-    .me-2 {
-        display: none;
-    }
+    // .me-2 {
+    //     display: none;
+    // }
 }
