--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -509,6 +509,12 @@ color:$green-color;
         background: $primary;
         color:$white;
        }
+       &.active .page-link {
+        z-index: 3;
+        color: #fff;
+        background-color: $primary;
+        border-color: $primary;
+    }
     }
 }
 .box-head{
@@ -692,6 +698,9 @@ color:$green-color;
     color: $white5;
 }
 .mob-filter{
+    display: flex;
+    align-items: center;
+    justify-content: end;
     @media #{$max-sm} {
         width: 100%;
         margin-bottom: 20px;
@@ -926,7 +935,9 @@ color:$green-color;
     -ms-border-radius: 9px;
     -moz-border-radius: 9px;
     padding: 5px;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 .white-image{
     display: none;
@@ -2020,8 +2031,11 @@ input{
 .modal-form{
     .form-group {
         margin-bottom: 30px;
-        @media #{$max-md}{
+        @media #{$max-xxl}{
             margin-bottom: 15px;
+        }
+        @media #{$max-md}{
+            margin-bottom: 12px;
         }
         &:last-child{
             margin-bottom: 0;
@@ -2093,4 +2107,12 @@ input{
 .spinner-outer{
     width: 100%;
     height: 100%
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
 }
