--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -791,7 +791,7 @@ color:$green-color;
     font-weight: 100;
 }
 .sec-spc-high {
-    padding: 65px 0;
+    padding: 95px 0px 80px;
     @media #{$max-md} {
         padding: 45px 0 35px;
     }
@@ -1036,6 +1036,9 @@ color:$green-color;
     top: auto;
     bottom: -4px;
     left: auto;
+    @media #{$max-xxxl}{
+        max-width: 580px;
+    }
 }
 .char-block {
    @media #{$max-lg} {
@@ -1661,25 +1664,27 @@ input{
         height: 100%;
         left: 0;
         right: 0;
-        background-image: url('../../images/animation.gif');
         background-size: 100% 110%;
         background-repeat: no-repeat;
         background-position: center;
-        @media #{$max-xsm}{
-            display: none;
+        @media (min-width:480px){
+            background-image: url('../../images/animation.gif');
         }
+        @media(max-width:479.98px){
+            background-image: url('../../images/gif-sm.gif');
+            background-size: contain;
+            margin: 0 auto;
+            width: calc(100% - 144px);
+        }
+
+        // @media #{$max-xsm}{
+        //     // display: none;
+        // }
     }
     @media #{$max-sm}{
         margin: 100px auto 30px
     }
-    .coin-wrap {
-        max-width: 29px;
-        margin: 0 auto;
-        transform: translateX(5px);
-    }
-    .coinimage-sec span {
-        transform: translateX(5px);
-    }
+
     .coin-desc {
         margin-top: 10px;
     }
@@ -1705,12 +1710,18 @@ input{
         width: 130px;
         height: 130px;
     }
-    
-    @media #{$max-xsmm}{
-        width: 115px;
-        height: 115px;
+    @media(max-width:479.98px){
+        width: 90px;
+        height: 90px;
     }
-    
+    @media (max-width:375px){
+        width: 75px;
+        height: 75px;
+    }
+    // @media #{$max-xsmm}{
+    //     width: 115px;
+    //     height: 115px;
+    // }
     
 }
 // .circle-blue{
@@ -1806,6 +1817,19 @@ input{
         display: block;
         margin-top: 8px;
         color: $grey_light;
+        @media (max-width:375px){
+            margin-top: 2px;
+        }
+    }
+    .coin-wrap {
+        @media (max-width:479.98px){
+            max-width: 25px;
+            margin: 0 auto;
+            transform: translateX(0);
+        }
+        @media (max-width:375px){
+            max-width: 20px;
+        }
     }
 }
 .center-graph {
@@ -1874,9 +1898,12 @@ input{
 }
 .coinimage-sec{
     img{
-        @media #{$max-sm}{
-            width: 35px;
-        } 
+        // @media #{$max-sm}{
+        //     max-width: 35px;
+        // } 
+        // @media (max-width){
+        //     max-width: 2;
+        // }
     }
 }
 .chain-sec{
