--- a/public/assets/scss/pages/_dashboard.scss
+++ b/public/assets/scss/pages/_dashboard.scss
@@ -1,25 +1,25 @@
-.trs-1 {
-    transform: translateY(1px);
-}
-.trs-2 {
-    transform: translateY(2px);
-}
-.trs-3 {
-    transform: translateY(3px);
-}
-.trs-6{
-    transform: translateY(6px);
-}
-.trsn-1 {
-    transform: translateY(-1px);
-}
-.trsn-2 {
-    transform: translateY(-2px);
-}
+// .trs-1 {
+//     transform: translateY(1px);
+// }
+// .trs-2 {
+//     transform: translateY(2px);
+// }
+// .trs-3 {
+//     transform: translateY(3px);
+// }
+// .trs-6{
+//     transform: translateY(6px);
+// }
+// .trsn-1 {
+//     transform: translateY(-1px);
+// }
+// .trsn-2 {
+//     transform: translateY(-2px);
+// }
 
-.trsn-3 {
-    transform: translateY(-3px);
-}
+// .trsn-3 {
+//     transform: translateY(-3px);
+// }
 
 .card-side {
     padding: 30px;
