validators details page

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -10,7 +10,7 @@ $black3: #212027;
 $sucsses:#437c1b;
 $sucsses_color2:#6eba37;
 
-// Dark theme var end
+// Dark theme var end#212027
 
 $primary_color:#fea500;
 $primary_color2:#fea700;
