--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -357,12 +357,29 @@
     border-radius: 30px;
     background: $black3;
     color:$white;
+    @media #{$max-xsm}{
+        font-size: 12px;
+        padding:10px 10px 10px 30px;
+    }
+    @media #{$max-xxsm}{
+        font-size: 10px;
+        padding: 8px 8px 8px 30px;
+    }
+    
 }
 .search-box  {
     img{
         position: absolute;
         left: 20px;
         top: 16px;
+        @media #{$max-xsm}{
+                left: 13px;
+                top: 13px;
+                max-width: 10px;
+        }
+        @media #{$max-xxsm}{
+            top: 10px;
+        }
     }
    
 }
@@ -1002,6 +1019,7 @@ color:$green-color;
         &:last-child{
             td{
                 border-bottom:none;
+                text-align: right;
             }
         }
         th{
@@ -1011,9 +1029,10 @@ color:$green-color;
             white-space: nowrap;
             &:first-child{
                 border-radius: 10px 0 0 0;
-                }
+            }
             &:last-child{
                 border-radius: 0 10px 0 0;
+                text-align: right;
             }
         }
         td{
@@ -1021,6 +1040,9 @@ color:$green-color;
         font-size: 16px;
         border-bottom:1px solid $black3;
         white-space: nowrap;
+        &:last-child{
+            text-align: right;
+        }
         }
     }
     tbody{
