--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1084,6 +1084,12 @@ color:$green-color;
         background-color: $black2;
     }
 }
+.center-head {
+    display: block;
+    width: 245px;
+    margin-left: auto;
+}
+
 .tbsm-txt {
     font-style: normal;
     font-size: 13px;
