--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -16,6 +16,14 @@
     left: 0;
     right: 0;
     z-index: 999;
+    .dd-ico{
+        .nav-link{
+            padding: 0.5rem 1rem;
+            @media #{$max-xsm}{
+                padding-left: 0;
+            }
+        }
+    }
     .navbar-collapse{
         flex-grow: unset;
     }
