--- a/public/assets/scss/core/_sidebar.scss
+++ b/public/assets/scss/core/_sidebar.scss
@@ -32,6 +32,14 @@
         min-height: calc(100vh - 64px);
         margin-top: 64px;
     }
+    @media #{$max-xsm}{
+        min-height: calc(100vh - 59px);
+        margin-top: 59px;
+    }
+    @media (max-width:360.98px){
+        min-height: calc(100vh - 49px);
+        margin-top: 49px;
+    }
     .close-icon {
         position: absolute;
         top: 10px;
