warnings in console

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -720,7 +720,7 @@ color:$green-color;
 .mob-filter{
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     flex-wrap: wrap;
     @media #{$max-lg}{
         justify-content: flex-start;
