--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2239,7 +2239,8 @@ input{
 }
 .spinner-outer{
     width: 100%;
-    height: 100%
+    height: 100%;
+    z-index: 9999999;
 }
 
 input[type=number]::-webkit-inner-spin-button, 
