latest changes updated

--- a/public/assets/scss/core/_sidebar.scss
+++ b/public/assets/scss/core/_sidebar.scss
@@ -33,6 +33,9 @@
         min-height: calc(100vh - 78px);
         margin-top: 78px;
     }
+    @media #{$max-md}{
+        margin-top: 64px;
+    }
     @media #{$max-xsm}{
         min-height: calc(100vh - 82px);
         margin-top: 82px;
