--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2591,3 +2591,20 @@ input[type=number]::-webkit-outer-spin-button {
 .font-xs{
     font-size: 20px;
 }
+// account page css
+.btn-grp {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
+    .btn-grp-lst{
+        margin-top: 12px;
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 50%;
+        .btn-small{
+            margin-right: 0;
+            width: 100%;
+        }
+    }
+}
