--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2593,18 +2593,32 @@ input[type=number]::-webkit-outer-spin-button {
 }
 // account page css
 .btn-grp {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
     margin-left: -5px;
     margin-right: -5px;
     .btn-grp-lst{
         margin-top: 12px;
-        padding-left: 5px;
+        padding-left: 5px;  
         padding-right: 5px;
-        width: 50%;
         .btn-small{
             margin-right: 0;
             width: 100%;
+        }
+        
+        .elipse-btn {
+            max-width: 60px;
+            height: 100%;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
         }
     }
 }
