resolved jira bugs, added 3  new popups

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2622,3 +2622,9 @@ input[type=number]::-webkit-outer-spin-button {
         }
     }
 }
+.height-fx{
+    min-height: 24px;
+}
+.spin-outer {
+    height: 90px;
+}
