--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1984,16 +1984,16 @@ input{
         flex-direction: column;
     }
 }
-.coinimage-sec{
-    img{
+// .coinimage-sec{
+    // img{
         // @media #{$max-sm}{
         //     max-width: 35px;
         // } 
         // @media (max-width){
         //     max-width: 2;
         // }
-    }
-}
+ //   }
+//}
 .chain-sec{
     .cus-alert{
         margin: 75px 0 40px;
@@ -2621,4 +2621,14 @@ input[type=number]::-webkit-outer-spin-button {
             }
         }
     }
+}
+
+@keyframes newShimmer {
+    
+}
+
+.shimmerNew {
+    background: linear-gradient(to right, #f6f6f6 8%, red 18%, #f6f6f6 33%) !important;
+    // background-size: 1000px 100% !important;
+    // animation: shimmer 2.2s linear infinite forwards !important;
 }
