--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2628,3 +2628,9 @@ input[type=number]::-webkit-outer-spin-button {
 .spin-outer {
     height: 90px;
 }
+.wallet-btn{
+    .btn-group{
+        margin-right: 12px;
+        margin-bottom: 12px;
+    }
+}
