--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2627,8 +2627,27 @@ input[type=number]::-webkit-outer-spin-button {
     
 }
 
-.shimmerNew {
-    background: linear-gradient(to right, #f6f6f6 8%, red 18%, #f6f6f6 33%) !important;
-    // background-size: 1000px 100% !important;
-    // animation: shimmer 2.2s linear infinite forwards !important;
-}
+
+
+// .shimmerNew {
+//     background: linear-gradient(to right, #f6f6f6 8%, red 18%, #f6f6f6 33%) !important;
+//     background-size: 1000px 100% !important;
+//     animation: shimmer 2.2s linear infinite forwards !important;
+// }
+
+
+// .shimmer {
+//     background: linear-gradient(to right, #f6f6f6 8%, red 18%, #f6f6f6 33%) !important;
+//     background-size: 1000px 100%;
+//     animation: shimmer 2.2s linear infinite forwards;
+// }
+
+
+// @keyframes shimmer {
+//     0% {
+//       background-position: -50% 0;
+//     }
+//     100% {
+//       background-position: 50% 0;
+//     }
+//   }
