--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2629,8 +2629,12 @@ input[type=number]::-webkit-outer-spin-button {
     height: 90px;
 }
 .wallet-btn{
-    .btn-group{
-        margin-right: 12px;
-        margin-bottom: 12px;
+    
+}
+.btn-group{
+    margin-right: 12px;
+    margin-bottom: 12px;
+    &:last-child{
+        margin-right: 0;
     }
 }
