--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1984,16 +1984,16 @@ input{
         flex-direction: column;
     }
 }
-.coinimage-sec{
-    img{
-        // @media #{$max-sm}{
-        //     max-width: 35px;
-        // } 
-        // @media (max-width){
-        //     max-width: 2;
-        // }
-    }
-}
+// .coinimage-sec{
+//     img{
+//         // @media #{$max-sm}{
+//         //     max-width: 35px;
+//         // } 
+//         // @media (max-width){
+//         //     max-width: 2;
+//         // }
+//     }
+// }
 .chain-sec{
     .cus-alert{
         margin: 75px 0 40px;
@@ -2628,9 +2628,9 @@ input[type=number]::-webkit-outer-spin-button {
 .spin-outer {
     height: 90px;
 }
-.wallet-btn{
+// .wallet-btn{
     
-}
+// }
 .btn-group{
     margin-right: 12px;
     margin-bottom: 12px;
