--- a/public/assets/scss/pages/_bone-staking.scss
+++ b/public/assets/scss/pages/_bone-staking.scss
@@ -31,6 +31,11 @@
     margin-bottom: 25px;
 }
 
+.networkCard {
+    .bs-card {
+        justify-content: space-between;
+    }
+}
 .filter-sec.topmargin {
     margin-top: 30px;
 }
